--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,28 @@
   }
 }
 
+/* Thay đổi toàn bộ thanh cuộn */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Thay đổi phần cuộn */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 6px;
+}
+
+/* Thay đổi phần track của thanh cuộn */
+::-webkit-scrollbar-track {
+  background: #ccc;
+  border-radius: 6px;
+}
+
+/* Thay đổi phần khi hover lên phần cuộn */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
