add bang-hoi page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,13 @@ body {
   cursor: pointer; 
   filter: brightness(1.1);
 }
+
+.hide-scroll {
+  overflow: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
+.hide-scroll::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
